<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.android.healthquizapp.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <ImageView
            style="@style/firstPageLogo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/heartlogo" />

        <TextView
            style="@style/firstPageHeaderStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_page_header_text" />

        <TextView
            style="@style/descriptionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_page_description_text"
            android:textColor="@color/colorTextIcons" />

        <EditText
            android:id="@+id/nameField"
            style="@style/nameFieldStyle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/name_field_hint" />

        <Button
            android:id="@+id/startButton"
            style="@style/firstPageBtnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="startQuiz"
            android:text="@string/start_button" />

    </LinearLayout>

</ScrollView>
